<resources>
    <string name="app_name">Moovies</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_more">See more</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="label_release_date">Release date:</string>
    <string name="label_directed_by">Directed by:</string>
    <string name="label_duration">Duration:</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="on_watchlist">On watchlist</string>
    <string name="on_list">On list</string>
    <string name="add_to_list">Add to list</string>
    <string name="check_collection">Check collection</string>
    <string name="label_collection">This movie belongs to: </string>
    <string name="label_keywords">Keywords</string>
    <string name="no_videos">No videos</string>
    <string name="no_overview">No overview</string>
    <string name="no_images">No images</string>
    <string name="no_tagline">No tagline</string>
    <string name="not_available">N/A</string>
    <string name="label_info">Info</string>
    <string name="label_reviews">Reviews</string>
    <string name="credits">Credits</string>
    <string name="label_cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="label_title">Title:</string>
    <string name="label_original_title">Original title:</string>
    <string name="label_rating">Rating:</string>
    <string name="label_vote_count">Vote count:</string>
    <string name="label_status">Status:</string>
    <string name="label_network">Network:</string>
    <string name="label_production_companies">Production companies:</string>
    <string name="label_production_countries">Production countries:</string>
    <string name="label_spoken_language">Spoken language:</string>
    <string name="label_created_by">Created by:</string>
    <string name="label_first_air_date">First air date</string>

</resources>
