<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/text_info_label"
        style="@style/MovieTextLabel"
        android:visibility="visible"
        android:text="@string/label_info" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/text_full_title_label"
            style="@style/TextLabel"
            android:text="@string/label_title" />

        <TextView
            android:id="@+id/text_full_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_full_title_label"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/text_full_title_label" />

        <TextView
            android:id="@+id/text_original_title_label"
            style="@style/TextLabel"
            android:layout_below="@id/text_full_title"
            android:text="@string/label_original_title"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_original_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_original_title_label"
            android:layout_below="@id/text_full_title"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/text_original_title_label"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linear_layout_votes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_original_title"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_vote_label"
                style="@style/TextLabel"
                android:text="@string/label_rating" />

            <TextView
                android:id="@+id/text_vote_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/text_vote_count_label"
                style="@style/TextLabel"
                android:text="@string/label_vote_count" />

            <TextView
                android:id="@+id/text_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_status_label"
            style="@style/TextLabel"
            android:layout_below="@id/linear_layout_votes"
            android:text="@string/label_status" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_alignBaseline="@id/text_status_label"
            android:layout_below="@id/linear_layout_votes"
            android:layout_toEndOf="@id/text_status_label"/>

        <TextView
            android:id="@+id/text_network_label"
            style="@style/TextLabel"
            android:layout_below="@id/text_status"
            android:text="@string/label_network" />

        <TextView
            android:id="@+id/text_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_network_label"
            android:layout_below="@id/text_status"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/text_network_label"/>

        <TextView
            android:id="@+id/text_production_companies_label"
            style="@style/TextLabel"
            android:layout_below="@id/text_network"
            android:text="@string/label_production_companies" />

        <TextView
            android:id="@+id/text_production_companies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_production_companies_label"
            android:layout_below="@id/text_network"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/text_production_companies_label" />

        <TextView
            android:id="@+id/text_production_countries_label"
            style="@style/TextLabel"
            android:layout_below="@id/text_production_companies"
            android:text="@string/label_production_countries" />

        <TextView
            android:id="@+id/text_production_countries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_production_countries_label"
            android:layout_below="@id/text_production_companies"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/text_production_countries_label" />

        <TextView
            android:id="@+id/text_spoken_language_label"
            style="@style/TextLabel"
            android:layout_below="@id/text_production_countries"
            android:text="@string/label_spoken_language" />

        <TextView
            android:id="@+id/text_spoken_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_spoken_language_label"
            android:layout_below="@id/text_production_countries"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/text_spoken_language_label" />


    </RelativeLayout>
</LinearLayout>